--- a/parcialfrontend/src/app/Components/menu/menu.component.html
+++ b/parcialfrontend/src/app/Components/menu/menu.component.html
@@ -8,6 +8,9 @@
       <a mat-list-item href="/clientes">Clientes</a>
       <a mat-list-item href="/farmacos">Farmacos</a>
       <a mat-list-item href="/farmacia">Farmacia</a>
+      <a mat-list-item href="/create-cliente">Form-Clientes</a>
+      <a mat-list-item href="/create-farmacos">Form-Farmacos</a>
+      <a mat-list-item href="/create-farmacia">Form-Farmacia</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
